# depthai2know

./: .gitignore  README.md  readmerpi.md
CV/: depth_align.py  depth_at_point.py  depth_preview.py  depth_preview_orig.py  edge_in_depth_image.py  line_det_depth.py  line_det_disparity.py  mono_depth_aligned.py  mono_depth_aligned_2.py  spatial_location_calculator.py  spatial_location_calculator_2ROI.py  spatial_location_calculator_nROI.py  spatial_location_calculator_nROI_v1.py  spatial_location_calculator_orig.py
Camera/: MRE_record.py  MRE_record_orig.py  MRE_replay.py  calib_19443010A19E7A2700.json  camera_preview.py  mono_preview.py  mono_preview_crop.py  record.py  record_app.py  replay.py
IMU/: 0mn_gyroSR100_accSR125_imuTK.csv  accel_gyrocal_xDown.csv  accel_gyrocal_xUp.csv  accelraw_gyrocal_xDown.csv  accelraw_gyrocal_xDown.ods  accelraw_gyrocal_xUp.csv  compare_drones_OAKLight_flight_manual.ipynb  compare_imu_noises.ipynb  get_imu_part_number.py  gravity_gyrocal_xDown.csv  gravity_gyrocal_xUp.csv  gyro_accel_csv.py  gyro_accel_imuTK.py  gyro_allan.py  gyro_drift.ipynb  gyro_histo.py  imu_accel_analysis_allan.py  imu_analysis_allan.py  imu_gyro_analysis_allan.py  imu_gyro_analysis_allan_imutk.py  imu_noise_characterization.ipynb  imu_oak_BNO086_0.1_12042024.csv  imu_output.py  imu_time_stamp_analysis.ipynb  imu_timestamps_plots.py  linaccel_gyrocal_xDown.csv  linaccel_gyrocal_xUp.csv  noise_from_allan.ipynb  test_imu.csv  tmp  (+3 more)
ROS2/cpp/oakd_ros2/: CMakeLists.txt  README.md  oakd_ros2.cpp  package.xml
VIO/cpp/: CMakeLists.txt  README.md  oakd_euroc.cpp
(+64 files in other folders)
