set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS_RELEASE "-O1")
cmake_minimum_required(VERSION 3.8)
project(oakd_ros2)
find_package(depthai CONFIG REQUIRED)
find_package(OpenCV REQUIRED)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
include_directories(${ament_INCLUDE_DIRS})
add_executable(oakd_ros2 oakd_ros2.cpp)
ament_target_dependencies(oakd_ros2 rclcpp std_msgs sensor_msgs)
target_link_libraries(oakd_ros2 ${OpenCV_LIBS} depthai::core)
ament_package()
